[package]
name = "curlview"
version = "0.2.0"
edition = "2024"
authors = ["dalei <guoyunlei@live.com>"]
description = "A Rust-powered HTTP performance analyzer that visualizes curl timing metrics in a human-readable format."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
colored = "2.0"
lazy_static = "1.4"
regex = "1.10"
