[package]
name = "curlview"
version = "0.3.0"
edition = "2024"
authors = ["dalei <guoyunlei@live.com>"]
description = "A Rust-powered HTTP performance analyzer that visualizes timing metrics in a human-readable format."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3"
tokio = { version = "1.50", features = ["rt", "net", "time", "macros"] }
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
hickory-resolver = { version = "0.25.2", features = ["system-config"] }
tokio-rustls = "0.26.4"
rustls = "0.23.37"
rustls-pki-types = "1.14"
webpki-roots = "1.0.6"
http = "1.4"
bytes = "1.11"
pin-project-lite = "0.2.17"
url = "2.5.8"
x509-parser = "0.17"
